# rules_gleam

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  NEW_ARCH.md  README.md  renovate.json
.bcr/: presubmit.yml
.github/workflows/: BUILD.bazel  buildifier.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD.bazel
e2e/nested_smoke/: MODULE.bazel
e2e/nested_smoke/outer/inner/: BUILD.bazel  gleam.toml
e2e/nested_smoke/outer/inner/src/: nested.gleam
e2e/nested_smoke/outer/inner/test/: nested_test.gleam
e2e/smoke/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  gleam.toml
e2e/smoke/src/: lib.gleam  main.gleam
erlang/: BUILD.bazel
erlang/private/: erlang_toolchain.bzl  erlang_toolchain_config.bzl  local_erlang_repository.bzl
examples/hello_world/: BUILD.bazel  MODULE.bazel  gleam.toml
examples/nested_smoke/outer/inner/: BUILD.bazel  gleam.toml
examples/nested_smoke/outer/inner/src/: lib.gleam
examples/smoke/: MODULE.bazel  README.md  WORKSPACE.bazel  gleam.toml
examples/smoke/test/: my_app_test.gleam
examples/standalone_app/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  gleam.toml
examples/standalone_app/src/: app.gleam
examples/standalone_app/test/: standalone_app_test.gleam
examples/standalone_app/test_standalone/: run.sh
examples/standalone_app/test_standalone/lib/gleam_stdlib/_gleam_artefacts/: gleam@bit_array.cache  gleam@bool.cache  gleam@bytes_tree.cache  gleam@dict.cache  gleam@dynamic.cache  gleam@dynamic@decode.cache  gleam@float.cache  gleam@function.cache  gleam@int.cache  gleam@io.cache  gleam@list.cache  gleam@option.cache  gleam@order.cache  gleam@pair.cache  gleam@result.cache  gleam@set.cache  gleam@string.cache  gleam@string.cache_meta  gleam@string_tree.cache  gleam@uri.cache
examples/standalone_app/test_standalone/lib/gleam_stdlib/ebin/: gleam@bit_array.beam  gleam@bool.beam  gleam@bytes_tree.beam  gleam@dict.beam  gleam@dynamic.beam  gleam@dynamic@decode.beam  gleam@float.beam  gleam@function.beam  gleam@int.beam  gleam@io.beam  gleam@list.beam  gleam@option.beam  gleam@order.beam  gleam@pair.beam  gleam@result.beam  gleam@set.beam  gleam@string.beam  gleam@string_tree.beam  gleam@uri.beam  gleam_stdlib.app  gleam_stdlib.beam
examples/standalone_app/test_standalone/lib/gleeunit/_gleam_artefacts/: gleeunit.cache  gleeunit@internal@gleam_panic.cache  gleeunit@internal@reporting.cache  gleeunit@should.cache  gleeunit@should.erl
examples/standalone_app/test_standalone/lib/gleeunit/ebin/: gleeunit.beam  gleeunit@internal@gleam_panic.beam  gleeunit@internal@reporting.beam  gleeunit@should.beam  gleeunit_ffi.beam  gleeunit_gleam_panic_ffi.beam  gleeunit_progress.beam
examples/standalone_app/test_standalone/lib/standalone_app/_gleam_artefacts/: app.cache  app.cache_meta  app.erl  standalone_app@@main.erl
examples/standalone_app/test_standalone/lib/standalone_app/ebin/: app.beam  standalone_app.app  standalone_app@@main.beam
examples/web_server/: BUILD.bazel  gleam.toml
examples/web_server/src/: router.gleam  web_server.gleam
examples/web_server/test/: router_test.gleam  web_server_test.gleam
gleam/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
gleam/private/: BUILD.bazel  escript_builder.erl  gleam_binary.bzl  gleam_binary_v2.bzl  gleam_library.bzl  gleam_library_v2.bzl  gleam_test.bzl  gleam_test_v2.bzl  gleescript_main_shim.erl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
test/binary_test/: BUILD.bazel  gleam.toml
test/binary_test/src/: greet.gleam  main.gleam
test/library_test/: BUILD.bazel  gleam.toml
test/library_test/greet_lib/: gleam.toml
test/library_test/hello_lib/: gleam.toml
test/library_test/src/: greet.gleam  hello.gleam
test/test_example/: BUILD.bazel  gleam.toml
test/test_example/src/: calculator.gleam
test/test_example/test/: calculator_test.gleam
