load("@rules_gleam//gleam:defs.bzl", "gleam_binary", "gleam_library", "gleam_test")

# This example assumes that `gleam.toml` is present in this directory.
# The `package_name` attribute should match the name in gleam.toml.

gleam_library(
    name = "my_app_lib",
    package_name = "my_app",  # Matches name in gleam.toml
    srcs = [
        "src/my_app.gleam",
    ],
    gleam_toml = ":gleam.toml",
)

gleam_binary(
    name = "my_app_bin",
    package_name = "my_app",
    srcs = [
        "src/main.gleam",
    ],
    gleam_toml = ":gleam.toml",
    deps = [":my_app_lib"],
)

gleam_test(
    name = "my_app_test",
    package_name = "my_app",
    srcs = [
        "src/my_app.gleam",
        "test/my_app_test.gleam",
    ],
    gleam_toml = ":gleam.toml",
    deps = [":my_app_lib"],
)
