load("@rules_gleam//gleam:defs.bzl", "gleam_binary", "gleam_library", "gleam_test")

# Library: compiles my_app + main modules via gleam compile-package.
# Deps on gleam_stdlib come from the Hex packages declared in MODULE.bazel.
gleam_library(
    name = "my_app_lib",
    data = ["gleam.toml"],
    package_name = "my_app",
    srcs = glob(["src/**/*.gleam"]),
    deps = ["@gleam_packages//:gleam_stdlib"],
)

# Binary: assembles pre-compiled BEAM files into a runnable release.
# Does NOT recompile — just packages the library output.
gleam_binary(
    name = "my_app_bin",
    dep = ":my_app_lib",
    entry_module = "main",
)

# Test: compiles test sources with gleam compile-package --test,
# then runs via erl with gleeunit as entry point.
gleam_test(
    name = "my_app_test",
    data = ["gleam.toml"],
    package_name = "my_app",
    srcs = glob(["src/**/*.gleam"]),
    test_srcs = glob(["test/**/*.gleam"]),
    deps = [
        "@gleam_packages//:gleam_stdlib",
        "@gleam_packages//:gleeunit",
    ],
)
