load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "gleescript_main_shim.erl",
    "escript_builder.erl",
])

bzl_library(
    name = "gleam_library",
    srcs = ["gleam_library.bzl"],
    visibility = ["//gleam:__subpackages__"],
)

bzl_library(
    name = "gleam_binary",
    srcs = ["gleam_binary.bzl"],
    visibility = ["//gleam:__subpackages__"],
    deps = [":gleam_library"],
)

bzl_library(
    name = "gleam_test",
    srcs = ["gleam_test.bzl"],
    visibility = ["//gleam:__subpackages__"],
    deps = [":gleam_library"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//gleam:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//gleam:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//gleam:__subpackages__"],
)
