load("@rules_gleam//gleam:defs.bzl", "gleam_binary", "gleam_library", "gleam_test")

# This example assumes that `gleam.toml` is present in this directory.
# The `package_name` attribute should match the name in gleam.toml.

gleam_library(
    name = "nested_lib",
    package_name = "nested",  # Matches name in gleam.toml
    srcs = [
        "src/lib.gleam",
    ],
    gleam_toml = ":gleam.toml",
)

gleam_binary(
    name = "nested_bin",
    package_name = "nested",
    srcs = [
        "src/nested.gleam",
    ],
    gleam_toml = ":gleam.toml",
    deps = [":nested_lib"],
)

gleam_test(
    name = "nested_test",
    package_name = "nested",
    srcs = [
        "test/nested_test.gleam",
    ],
    gleam_toml = ":gleam.toml",
    deps = [":nested_lib"],
)
